Fixing spacing issues of signup page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -98,14 +98,13 @@ option{
 }
 
 .login-form, .signup-form {
-    width: 50%;
+    width: 60%;
 }
 
 .login-container{
     background-color: white;
     border-radius: 10px;
     width: 45%;
-    height: 60%;
     padding: 3rem 2rem;
     padding-top: 7rem;
 }
@@ -142,22 +141,26 @@ input.form-control::placeholder {
 
 /********** Sign Up Page **********/
 .signup-page{
-    display: flex; 
-    flex-flow: wrap row;
+    display: flex;
+    flex-direction: row;
     width:100%;
-    height:100%;
+    height: 100%;
+    margin:auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .signup-container{
     background-color: white;
     border-radius: 10px;
-    width: 25%;
-    height:75%;
+    width: 20%;
     padding: 3rem 0.5rem;
-    padding-top: 7rem;
-    margin-left: 5%;
     border: #000, solid, 1px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.signup-scratch-canvas {
+    width: 60%;
 }
 
 /******** Create Scratch Page ********/
